tests/cases/modules/ok/reimport_same_source_parse.ari
pub fn words() -> i64 {
  return 21;
}
