tests/cases/modules/errors/imported_semantic_error.ari
pub fn broken() -> i64 {
  return missing_value;
}
